# MrRadar

./: .editorconfig  .gitignore  .mise.toml  Dockerfile  LICENSE  Makefile  README.md  codecov.yml  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
html/: loop.html  script.js  style.css
mr_radar/: __init__.py  __main__.py  bounding_box_calculator.py  cache_keys.py  cli.py  frame_generator.py  main.py  map_generator.py  radar_loop_generator.py  rlg_cache.py  rlg_defaults.py  rlg_exception.py
tests/: conftest.py  test_cache.py  test_fg_instance_defaults.py  test_fg_invalid_instance.py  test_fg_valid_instance.py  test_instance_defaults.py  test_invalid_instance.py  test_mg_instance_defaults.py  test_mg_valid_instance.py  test_requirements.py  test_rlg_instance_defaults.py  test_rlg_invalid_instance.py  test_rlg_valid_instance.py  test_valid_instance.py
